# paper.robotic-resist-development

./: .gitignore  .gitmodules  LICENSE  README.md  justfile  requirements.txt
doc/assets/models/CameraMount/: Camera Mount (angled) - Camera mount (bottom, side mount).step
doc/assets/models/EOAT_Tweezer/: README.txt  Tweezer Upright (Long, 60mm) - Mount.step
doc/assets/models/GasValve/: GasValve.step  README.txt
docs/assets/models/CameraMount/: Camera Mount (angled) - Camera mount (top, side mount).step  README.md
docs/assets/models/EOAT_Tweezer/: Tweezer Upright (Long, 40mm) - Mount.step
scripts/: bringup_all.sh  capture_image.py  kill_bringup_nodes.sh  test_chip_detection.py  test_chip_detection_visual.py
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/action/: FollowCartesianTrajectory.action
src/custom_interfaces/msg/: CartesianPosture.msg  CartesianTrajectory.msg  CartesianTrajectoryPoint.msg  PoseStampedArray.msg
src/custom_interfaces/srv/: GetRtJointTorq.srv  Home.srv  MoveLin.srv  MoveLinRelWrf.srv  MovePoseEuler.srv  WaitIdle.srv
src/meca_500_r3_meca_arm_ikfast_plugin/: CMakeLists.txt  meca_500_r3_meca_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/meca_500_r3_meca_arm_ikfast_plugin/src/: meca_500_r3_meca_arm_ikfast_moveit_plugin.cpp  meca_500_r3_meca_arm_ikfast_solver.cpp
src/meca_calibration/results_calibration/: 20250528_test2_calib_5_samples.launch.py  20250528_test_calib_5_samples.launch.py  20250604_calib_20_samples.launch.py  20250605_calibPark_12_samples.launch.py  20250605_calib_5_samples.launch.py
src/meca_calibration/results_calibration/joint_states/: joint_states_20250605.yaml  joint_states_20250612.yaml  joint_states_v2_20250605.yaml
src/meca_calibration/results_calibration/samples/: samples_20250605.yaml  samples_20250612.yaml  samples_v2_20250605.yaml
src/meca_controller/: package.xml  setup.py
src/meca_controller/launch/: 20250605_calib_12_samples.launch.py  20250605_calib_16_samples.launch.py  20250609_calibPark_5_samples.launch.py  20250612_calibPark_9_samples.launch.py  20250714_calibPark_9_samples.launch.py  tcp_tf.launch.py
src/meca_controller/meca_controller/: meca_calibration.py  meca_control.py  meca_demo_develop.py  meca_demo_develop_20250624.py  meca_driver.py  meca_gotoPose.py  meca_settings.py  meca_test_stirring.py  switch_usb_relay.py
src/meca_moveit_config/: CMakeLists.txt  local_setup.sh  package.sh  package.xml  scene_publisher.py
src/meca_moveit_config/cmake/: meca_moveit_configConfig.cmake
src/meca_moveit_config/config/: chomp_planning.yaml  environment.yaml  environment_3_nalgene_beakers.yaml  environment_example.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  meca_500_r3.srdf  meca_500_r3_tweezer.urdf  move_group.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  rrtc_planning.yaml  stomp_planning.yaml
src/meca_moveit_config/launch/: move_group.launch.py  moveit.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  sim.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
src/meca_moveit_config/meshes/: Tweezer_finger_1mm.stl  beaker_hollow_tapered.stl  beaker_test.stl  cup_hollow_tapered.stl  genBeaker.py
src/meca_moveit_config/urdf/: meca_500_r3_tweezer.urdf
src/meca_perception/: camera_settings_calibration_20250604.json  package.xml  setup.cfg  setup.py
src/meca_perception/meca_perception/: chip_detection_node copy.py  chip_detection_node.py  image_subscriber_node.py
src/mecademic_description/: CMakeLists.txt  package.xml
src/mecademic_description/.rviz2/: meca500_20250305.rviz  meca500_20250306.rviz  persistent_settings
src/mecademic_description/launch/: meca.launch.py
src/mecademic_description/meshes/: Tweezer_finger_3mm.stl
src/mecademic_description/urdf/: meca.urdf
src/moveit_linqs/moveit_linqs_historical/: CMakeLists.txt  chomp_optimizer_adapter_plugin_description.xml  package.xml  stomp_smoothing_adapter_plugin_description.xml
src/moveit_linqs/moveit_linqs_historical/src/: chomp_optimizer_adapter.cpp  stomp_smoothing_adapter.cpp
src/moveit_linqs/moveit_linqs_rrtc/: README.md
src/moveit_linqs/moveit_linqs_rrtc/rrtc_interface/: CMakeLists.txt  package.xml  plugin_description.xml
src/moveit_linqs/moveit_linqs_rrtc/rrtc_interface/include/rrtc_interface/: rrtc_interface.hpp  rrtc_planning_context.hpp
src/moveit_linqs/moveit_linqs_rrtc/rrtc_interface/plugins/: rrtc_interface_plugin_description.xml
src/moveit_linqs/moveit_linqs_rrtc/rrtc_interface/src/: rrtc_interface.cpp  rrtc_planning_context.cpp  rrtc_plugin.cpp
src/moveit_linqs/moveit_linqs_rrtc/rrtc_motion_planner/: CMakeLists.txt  package.xml
src/moveit_linqs/moveit_linqs_rrtc/rrtc_motion_planner/include/rrtc_motion_planner/: rrtc_parameters.hpp  rrtc_planner.hpp  rrtc_utils.hpp
src/moveit_linqs/moveit_linqs_rrtc/rrtc_motion_planner/src/: rrtc_planner.cpp  rrtc_utils.cpp
