<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_linqs_historical</name>
  <version>0.0.1</version>
  <description>A collection of Moveit2 code that was recovered from historical Moveit code</description>
  <maintainer email="gyger@stanford.edu">gyger</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>chomp_motion_planner</depend>
  <depend>moveit_planners_stomp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/chomp_optimizer_adapter_plugin_description.xml"/>
    <moveit_core plugin="${prefix}/stomp_smoothing_adapter_plugin_description.xml"/>
  </export>
</package>
